Bug 1328038 - Refuse to play High 4:4:4 Predictive Profile. r=JamesCheng, a=jcristau

It is not supported by Windows WMF.

MozReview-Commit-ID: 2OyjC0qGwD4